Add favicon, SEO and Open Graph tags

--- a/pl.html
+++ b/pl.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educatimo Neuro – Przyszłość edukacji opartej na dowodach</title>
+
+<meta name="description" content="Platforma SaaS do digitalizacji i wizualizacji rozwoju poznawczego dzieci. Przestań sprzedawać obietnice — zacznij pokazywać wyniki.">
+<meta property="og:title" content="Educatimo Neuro – Przyszłość edukacji opartej na dowodach">
+<meta property="og:description" content="Platforma SaaS do digitalizacji i wizualizacji rozwoju poznawczego dzieci. Zacznij pokazywać wyniki.">
+<meta property="og:image" content="https://www.neuro.educatimo.com/img/solution-image.jpg">
+<meta property="og:url" content="https://www.neuro.educatimo.com/pl.html">
+<meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
+
+<link rel="icon" type="image/png" href="favicon.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
