--- a/ua.html
+++ b/ua.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educatimo Neuro – Майбутнє доказової освіти</title>
+
+<meta name="description" content="SaaS-платформа для оцифровки та візуалізації когнітивного розвитку дітей. Припиніть продавати обіцянки — почніть демонструвати результати.">
+<meta property="og:title" content="Educatimo Neuro – Майбутнє доказової освіти">
+<meta property="og:description" content="SaaS-платформа для оцифровки та візуалізації когнітивного розвитку дітей. Почніть демонструвати результати.">
+<meta property="og:image" content="https://www.neuro.educatimo.com/img/solution-image.jpg">
+<meta property="og:url" content="https://www.neuro.educatimo.com/ua.html">
+<meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
+
+<link rel="icon" type="image/png" href="favicon.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
