--- a/cz.html
+++ b/cz.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educatimo Neuro – Budoucnost vzdělávání založeného na důkazech</title>
+
+<meta name="description" content="SaaS platforma pro digitalizaci a vizualizaci kognitivního vývoje dětí. Přestaňte prodávat sliby — začněte prokazovat výsledky.">
+<meta property="og:title" content="Educatimo Neuro – Budoucnost vzdělávání založeného na důkazech">
+<meta property="og:description" content="SaaS platforma pro digitalizaci a vizualizaci kognitivního vývoje dětí. Začněte prokazovat výsledky.">
+<meta property="og:image" content="https://www.neuro.educatimo.com/img/solution-image.jpg">
+<meta property="og:url" content="https://www.neuro.educatimo.com/cz.html">
+<meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
+
+<link rel="icon" type="image/png" href="favicon.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
