--- a/en.html
+++ b/en.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educatimo Neuro – The Future of Evidence-Based Education</title>
+
+<meta name="description" content="SaaS platform for digitizing and visualizing children's cognitive development. Stop selling promises — start showing results.">
+<meta property="og:title" content="Educatimo Neuro – The Future of Evidence-Based Education">
+<meta property="og:description" content="SaaS platform for digitizing and visualizing children's cognitive development. Start showing results.">
+<meta property="og:image" content="https://www.neuro.educatimo.com/img/solution-image.jpg">
+<meta property="og:url" content="https://www.neuro.educatimo.com/en.html">
+<meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
+
+<link rel="icon" type="image/png" href="favicon.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
