--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educatimo Neuro – Будущее доказательного образования</title>
+
+<meta name="description" content="SaaS-платформа для оцифровки и визуализации когнитивного развития детей. Перестаньте продавать обещания — начните демонстрировать результаты.">
+<meta property="og:title" content="Educatimo Neuro – Будущее доказательного образования">
+<meta property="og:description" content="SaaS-платформа для оцифровки и визуализации когнитивного развития детей. Начните демонстрировать результаты.">
+<meta property="og:image" content="https://www.neuro.educatimo.com/img/solution-image.jpg">
+<meta property="og:url" content="https://www.neuro.educatimo.com/index.html">
+<meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
+
+<link rel="icon" type="image/png" href="favicon.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
