FAQ: Added detailed cognitive tests list to index.html (RU).

--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
                 "@type": "Answer",
                 "text": "В отличие от традиционных тестов, которые дают только итоговый балл, Educatimo Neuro анализирует детализированные сырые данные (например, время реакции, количество ошибок) и визуализирует их, предлагая персонализированные рекомендации для развития конкретных когнитивных навыков."
               }
+            },
+            {
+              "@type": "Question",
+              "name": "Какие когнитивные тесты используются в платформе Educatimo Neuro?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Мы используем 9 стандартизированных и валидизированных методик, включая аналоги тестов из батарей WISC, WMS, NEPSY-II и классических нейропсихологических методик (например, Таблицы Шульте, Графический диктант Эльконина). Тесты охватывают слуховую и зрительную память (краткосрочную и долгосрочную), скорость внимания, пространственное и логическое мышление, а также самооценку и рефлексию."
+              }
             }
           ]
         }
@@ -232,14 +240,14 @@
     <section id="about-us-reviews">
         <div class="container">
             <div class="section-header">
-                <h2>Наша экспертиза и отзывы клиентов</h2>
+                <h2>Наша экспертиза и отзывы клиентов.</h2>
                 <p>Educatimo Neuro создан командой экспертов в области когнитивной психологии и IT. Мы заботимся о доказательности и эффективности.</p>
             </div>
 
             <div class="about-us-block">
                 <h3>Основано на науке и опыте</h3>
                 <p>Проект Educatimo Neuro зародился в 2018 году как локальное решение для оценки и коррекции когнитивных функций в частном образовательном центре. Сегодня, благодаря сотрудничеству с ведущими нейропсихологами, мы превратили его в масштабируемую SaaS-платформу. Наша команда имеет 10-летний опыт в разработке образовательных технологий и гарантирует методологическую точность каждого теста и алгоритма.</p>
-                <a href="#registration" class="btn secondary-btn">Узнать больше о команде</a> </div>
+                <a href="#about-team" class="btn secondary-btn">Узнать больше о команде</a> </div>
 
             <div class="reviews-grid">
                 <h3>Что говорят наши партнеры?</h3>
@@ -283,6 +291,21 @@
                 <div class="faq-item">
                     <h3 class="faq-question">В чем отличие от обычных тестов?</h3>
                     <p class="faq-answer">В отличие от традиционных тестов, которые дают только итоговый балл, Educatimo Neuro анализирует детализированные сырые данные (например, время реакции, количество ошибок) и визуализирует их, предлагая персонализированные рекомендации для развития конкретных когнитивных навыков.</p>
+                </div>
+                <div class="faq-item">
+                    <h3 class="faq-question">Какие когнитивные тесты используются в платформе?</h3>
+                    <p class="faq-answer">Мы используем самые распространенные и проверенные временем тесты, используемые во всем мире для тестирования когнитивных функций. Наша платформа включает 9 стандартизированных методик:</p>
+                    <ul>
+                        <li>**1. Слуховая вербальная память (краткосрочная):** Методика направлена на оценку слуховой вербальной кратковременной памяти и является аналогом субтеста «Запоминание слов» из батареи Wechsler Memory Scale (WMS). Обладает высокой валидностью и широко применяется в клинической и школьной диагностике.</li>
+                        <li>**2. Зрительно-вербальная память (краткосрочная):** Оценка зрительно-вербальной ассоциативной памяти, близкая к субтестам «Memory for Objects» (NEPSY-II) и «Paired Associates» (WMS). Методика валидирована для оценки процесса обучения и формирования новых связей.</li>
+                        <li>**3. Долгосрочная слуховая память:** Методика оценивает долгосрочную слуховую вербальную память и консолидацию следов памяти. Является стандартным компонентом нейропсихологического обследования (по А.Р. Лурии) и соответствует этапу отсроченного воспроизведения в тестах RAVLT и WMS.</li>
+                        <li>**4. Долгосрочная зрительная память:** Тест оценивает долгосрочную зрительно-вербальную память. Аналоги методик ассоциативной памяти из батарей NEPSY-II и WMS. Широко используется для диагностики нарушений обучения и памяти клинического спектра.</li>
+                        <li>**5. Таблицы Шульте (Скорость внимания):** Тест Шульте является классической методикой для оценки скорости переключения и концентрации внимания. Функционально соответствует тестам Trail Making Test (TMT-A) и Symbol Search (WISC). Широко применяется в психологической и профориентационной диагностике.</li>
+                        <li>**6. Числовые последовательности (Абстрактно-логическое мышление):** Методика направлена на оценку индуктивного логического мышления и рабочей памяти. Является прямым аналогом субтестов «Числовые последовательности» и «Арифметика» из тестов интеллекта Векслера (WISC). Обладает высокой валидностью в оценке логического мышления.</li>
+                        <li>**7. Графический диктант (Пространственное мышление и концентрация внимания):** Классическая методика Д.Б. Эльконина для оценки произвольной регуляции, слухомоторной координации и пространственного мышления. Функционально близка к субтесту «Visuomotor Precision» (NEPSY-II). Широко используется в диагностике готовности к школьному обучению.</li>
+                        <li>**8. Логические задачи (Логическое мышление):** Тест оценивает вербально-логическое и дедуктивное мышление. Является ядром многих тестов интеллекта (аналоги субтестов «Similarities» и «Comprehension» из WISC). Относится к высоко валидным методикам диагностики кристаллизованного интеллекта.</li>
+                        <li>**9. Самооценка и рефлексия:** Проективная методика «Лесенка» (авторы В.Г. Щур, С.Г. Якобсон) для исследования самооценки и концепции «отраженного Я» (Ч. Кули, Дж.Г. Мид). Широко применяется в детской консультативной и школьной психологии для качественной оценки эмоционально-личностной сферы.</li>
+                    </ul>
                 </div>
             </div>
         </div>
