E-E-A-T: Added team.html page, styles, and updated link in index.html (RU).

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="about-us-block">
                 <h3>Основано на науке и опыте</h3>
                 <p>Проект Educatimo Neuro зародился в 2018 году как локальное решение для оценки и коррекции когнитивных функций в частном образовательном центре. Сегодня, благодаря сотрудничеству с ведущими нейропсихологами, мы превратили его в масштабируемую SaaS-платформу. Наша команда имеет 10-летний опыт в разработке образовательных технологий и гарантирует методологическую точность каждого теста и алгоритма.</p>
-                <a href="#about-team" class="btn secondary-btn">Узнать больше о команде</a> </div>
+                <a href="team.html" class="btn secondary-btn">Узнать больше о команде</a>
 
             <div class="reviews-grid">
                 <h3>Что говорят наши партнеры?</h3>
