--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <meta name="description" content="SaaS-платформа для оцифровки и визуализации когнитивного развития детей. Перестаньте продавать обещания — начните демонстрировать результаты.">
 <meta property="og:title" content="Educatimo Neuro – Будущее доказательного образования">
 <meta property="og:description" content="SaaS-платформа для оцифровки и визуализации когнитивного развития детей. Начните демонстрировать результаты.">
-<meta property="og:image" content="https://www.neuro.educatimo.com/img/solution-image.jpg">
-<meta property="og:url" content="https://www.neuro.educatimo.com/index.html">
+<meta property="og:image" content="https://www.neuro.educatimo.com/img/hero-background.jpeg"> <meta property="og:url" content="https://www.neuro.educatimo.com/index.html">
 <meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
 
@@ -147,7 +146,7 @@
             </div>
             
             <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Educatimo Neuro Demo Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/_P52pl96Z4Q" title="Educatimo Neuro Demo Video (Russian)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <div class="video-description">
@@ -247,7 +246,7 @@
             <div class="about-us-block">
                 <h3>Основано на науке и опыте</h3>
                 <p>Проект Educatimo Neuro зародился в 2018 году как локальное решение для оценки и коррекции когнитивных функций в частном образовательном центре. Сегодня, благодаря сотрудничеству с ведущими нейропсихологами, мы превратили его в масштабируемую SaaS-платформу. Наша команда имеет 10-летний опыт в разработке образовательных технологий и гарантирует методологическую точность каждого теста и алгоритма.</p>
-                <a href="team.html" class="btn secondary-btn">Узнать больше о команде</a>
+                <a href="team.html" class="btn secondary-btn">Узнать больше о команде</a> </div>
 
             <div class="reviews-grid">
                 <h3>Что говорят наши партнеры?</h3>
