Branding & Content: Finalized all content (RU, UA, EN, CZ, PL), including 'Educator to Educator' narrative and clean video transcripts.

--- a/cz.html
+++ b/cz.html
@@ -162,11 +162,15 @@
             <div class="video-transcript">
                 <h3 class="transcript-toggle" onclick="toggleTranscript()">Přepis videa (textová verze)</h3>
                 <div class="transcript-content" id="transcript-content">
-                    <p><strong>[Začátek]</strong> Vítejte! Jmenuji se [Jméno] a jsem rád, že vám mohu představit Educatimo Neuro, platformu vytvořenou s cílem učinit rozvoj dětí měřitelným a transparentním. Naším posláním je přejít od "prodávání slibů" k "demonstrování výsledků."</p>
-                    <p><strong>[0:15 - Popis problému]</strong> Mnoho center čelí problému: jak ukázat rodiči, že se jeho dítě skutečně rozvíjí? Tradiční testy poskytují pouze statické skóre. My nabízíme dynamiku.</p>
-                    <p><strong>[0:30 - Řešení]</strong> Educatimo Neuro využívá patentované algoritmy pro analýzu surových testovacích dat získaných z tabletu a okamžitě je převádí do interaktivních, srozumitelných grafů. Můžete vidět, jak roste pozornost, zlepšuje se pracovní paměť a rychlost myšlení.</p>
-                    <p><strong>[0:45 - Funkčnost]</strong> Platforma umožňuje: 1. Provedení standardizovaného testu na tabletu. 2. Získání okamžité analýzy a doporučení. 3. Generování profesionální zprávy s brandingem pro rodiče s logem vašeho centra.</p>
-                    <p><strong>[1:00 - Výzva k akci]</strong> Připojte se k našemu pilotnímu programu. Staňte se jedním z prvních, kdo používá přístup založený na důkazech ve vzdělávání a začněte demonstrovat výsledky již dnes.</p>
+                    <p>Proč odcházejí zákazníci i z dobrých center? Protože slova: "Vaše dítě je šikovné" už nestačí.</p>
+                    <p>Rodiče chtějí vidět výsledky, za které platí. Neuro Educatimo je první SaaS platforma pro diagnostiku kognitivních funkcí.</p>
+                    <p>Zviditelněte a zpřehledněte pokrok dítěte. Je to jednoduché. Pedagog zaregistruje žáka a dítě absolvuje zábavné testování na tabletu.</p>
+                    <p>Bez stresu a nudných zkoušek, pod vedením odborníka vaší organizace. Výsledky testování se odesílají na server.</p>
+                    <p>Systém okamžitě analyzuje parametry mozku a sestaví přesný kognitivní profil žáka. Nevidíte jen výřez, ale dynamiku.</p>
+                    <p>Skutečný pokrok za tři měsíce nebo rok. To je důkaz účinnosti vašich lekcí. Naši partneři mohou vidět všechny provedené testovací sezení svých žáků, sestavovat je do skupin podle zaměření výuky nebo věku, přidávat a upravovat odborníky své organizace, kteří se zabývají prováděním a analýzou testů.</p>
+                    <p>Stahujte profesionální zprávy s vaším logem, rekvizitami a popisem vašich metodik. To posiluje autoritu vaší značky.</p>
+                    <p>Zaveďte diagnostiku jako placenou službu. Zvyšujte LTV klienta a důvěru rodičů na základě spolehlivých údajů.</p>
+                    <p>Neuro Educatimo: výsledek, který lze měřit. Zaregistrujte se a získejte měsíc bezplatného přístupu.</p>
                 </div>
             </div>
             </div>
@@ -245,7 +249,9 @@
 
             <div class="about-us-block">
                 <h3>Založeno na vědě a zkušenostech</h3>
-                <p>Projekt Educatimo Neuro vznikl v roce 2018 jako lokální řešení pro hodnocení a korekci kognitivních funkcí v soukromém vzdělávacím centru. Dnes, díky spolupráci s předními neuropsychology, jsme jej transformovali na škálovatelnou SaaS platformu. Náš tým má 10 let zkušeností s vývojem vzdělávacích technologií a zaručuje metodickou přesnost každého testu a algoritmu.</p>
+                <p>Náš projekt byl vytvořen bez pomoci profesionálních programátorů a marketérů. Jedná se o řešení **od pedagogů pro pedagogy**. Tuto myšlenku jsme nejprve otestovali **v našich dětských vzdělávacích centrech**, získali pozitivní zpětnou vazbu od rodičů a viděli zájem dětí.</p>
+                <p>Teprve poté vás zveme k účasti v pilotním projektu, protože jsme si jisti jeho účinností. Sdílíme své zkušenosti a vítáme nové **kolegy-praktiky**!</p>
+                <p>Projekt Educatimo Neuro vznikl v roce 2018 jako lokální řešení pro hodnocení a korekci kognitivních funkcí **v našich dětských vzdělávacích centrech**. Dnes, díky spolupráci s předními neuropsychology, jsme jej transformovali na škálovatelnou SaaS platformu. Náš tým má 10 let zkušeností s vývojem vzdělávacích technologií a zaručuje metodickou přesnost každého testu a algoritmu.</p>
                 <a href="team-cz.html" class="btn secondary-btn">Zjistit více o týmu</a> </div>
 
             <div class="reviews-grid">
@@ -295,7 +301,7 @@
                     <h3 class="faq-question">Jak Educatimo Neuro pomáhá demonstrovat výsledky? <i class="fas fa-chevron-down faq-icon"></i></h3>
                     <div class="faq-answer">
                         <div class="faq-answer-content">
-                            <p>Platforma přeměňuje surová testovací data na intuitivní grafy a zprávy. Můžete rodičům vizuálně ukázat dynamiku kognitivních funkcí jejich dítěte, potvrdit účinnost vašich lekcí objektivními údaji.</p>
+                            <p>Platforma přeměňuje surová testovací data na intuitivní grafy a zprávy. Můžete rodičům vizuálně ukázat dynamiku kognitivních funkcí jejich dítěte a potvrdit účinnost vašich lekcí objektivními údaji.</p>
                         </div>
                     </div>
                 </div>
