--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <meta name="description" content="SaaS-платформа для оцифровки и визуализации когнитивного развития детей. Перестаньте продавать обещания — начните демонстрировать результаты.">
 <meta property="og:title" content="Educatimo Neuro – Будущее доказательного образования">
 <meta property="og:description" content="SaaS-платформа для оцифровки и визуализации когнитивного развития детей. Начните демонстрировать результаты.">
-<meta property="og:image" content="https://www.neuro.educatimo.com/img/hero-background.jpeg"> <meta property="og:url" content="https://www.neuro.educatimo.com/index.html">
+<meta property="og:image" content="https://www.neuro.educatimo.com/img/hero-background.jpeg">
+<meta property="og:url" content="https://www.neuro.educatimo.com/index.html">
 <meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
 
@@ -141,7 +142,7 @@
     <section id="how-it-works">
         <div class="container">
             <div class="section-header">
-                <h2>Увидьте Educatimo Neuro в действии.</h2>
+                <h2>Посмотрите Educatimo Neuro в действии.</h2>
                 <p>Посмотрите короткое видео, чтобы узнать, как наша платформа помогает оцифровывать и визуализировать когнитивный прогресс детей, делая процесс обучения прозрачным и эффективным.</p>
             </div>
             
@@ -161,13 +162,16 @@
             <div class="video-transcript">
                 <h3 class="transcript-toggle" onclick="toggleTranscript()">Транскрипция видео (текстовая версия)</h3>
                 <div class="transcript-content" id="transcript-content">
-                    <p><strong>[Начало]</strong> Здравствуйте! Меня зовут [Имя], и я рад представить вам Educatimo Neuro, платформу, созданную для того, чтобы сделать развитие детей измеримым и прозрачным. Наша миссия — перейти от "продажи обещаний" к "демонстрации результатов".</p>
-                    <p><strong>[0:15 - Описание проблемы]</strong> Многие центры сталкиваются с проблемой: как показать родителю, что его ребенок действительно развивается? Традиционные тесты дают лишь статический балл. Мы же даем динамику.</p>
-                    <p><strong>[0:30 - Решение]</strong> Educatimo Neuro использует запатентованные алгоритмы анализа сырых данных тестирования, полученных с планшета, и мгновенно превращает их в интерактивные, понятные графики. Вы видите, как растет внимание, улучшается рабочая память и скорость мышления.</p>
-                    <p><strong>[0:45 - Функционал]</strong> Платформа позволяет: 1. Провести стандартизированный тест на планшете. 2. Получить моментальный анализ и рекомендации. 3. Генерировать профессиональный, брендированный отчет для родителей с логотипом вашего центра.</p>
-                    <p><strong>[1:00 - Призыв к действию]</strong> Присоединяйтесь к нашей пилотной программе. Станьте одним из первых, кто использует доказательный подход в образовании и начните демонстрировать результаты уже сегодня.</p>
-                    <p><strong>[Конец]</strong></p>
-                    </div>
+                    <p>Почему клиенты уходят даже из хороших центров? Потому что слов: "Ваш ребёнок молодец" уже недостаточно.</p>
+                    <p>Родители хотят видеть результат, за который платят. Neuro Educatimo — первая SaaS-платформа доказательной диагностики когнитивных функций.</p>
+                    <p>Сделайте прогресс ребёнка видимым и понятным. Всё просто. Педагог регистрирует ученика, и ребёнок проходит увлекательное тестирование на планшете.</p>
+                    <p>Без стресса и скучных экзаменов, под управлением специалиста вашей организации. Результаты тестирования отправляются на сервер.</p>
+                    <p>Система мгновенно анализирует параметры мозга и строит точный когнитивный профиль ученика. Вы видите не просто срез, а динамику.</p>
+                    <p>Реальный прогресс за 3 месяца или год. Это доказательство эффективности ваших занятий. Наши партнёры могут видеть все проведённые сессии тестирования своих учеников, компоновать их в группы по направлениям обучения или возрасту, добавлять и редактировать специалистов своей организации, занимающихся проведением и анализом тестов.</p>
+                    <p>Скачивайте профессиональные отчёты с вашим логотипом, реквизитами и описанием именно ваших методик. Это работает на авторитет вашего бренда.</p>
+                    <p>Внедрите диагностику как платную услугу. Увеличивайте LTV клиента и доверие родителей, опираясь на твёрдые данные.</p>
+                    <p>Neuro Educatimo: результат, который можно измерить. Регистрируйтесь и получите месяц бесплатного доступа.</p>
+                </div>
             </div>
             </div>
     </section>
@@ -245,7 +249,9 @@
 
             <div class="about-us-block">
                 <h3>Основано на науке и опыте</h3>
-                <p>Проект Educatimo Neuro зародился в 2018 году как локальное решение для оценки и коррекции когнитивных функций в частном образовательном центре. Сегодня, благодаря сотрудничеству с ведущими нейропсихологами, мы превратили его в масштабируемую SaaS-платформу. Наша команда имеет 10-летний опыт в разработке образовательных технологий и гарантирует методологическую точность каждого теста и алгоритма.</p>
+                <p>Наш проект создан без помощи профессиональных программистов и маркетологов. Это решение **от педагогов для педагогов**. Мы сначала проверили эту идею в собственных учебных центрах, получили положительный отзыв от родителей и увидели интерес детей.</p>
+                <p>Только после этого мы предлагаем вам присоединиться к пилотному проекту, будучи уверены в его эффективности. Мы делимся своим опытом и рады будем новым **коллегам-практикам**!</p>
+                <p>Проект Educatimo Neuro зародился в 2018 году как локальное решение для оценки и коррекции когнитивных функций **в наших детских образовательных центрах**. Сегодня, благодаря сотрудничеству с ведущими нейропсихологами, мы превратили его в масштабируемую SaaS-платформу. Наша команда имеет 10-летний опыт в разработке образовательных технологий и гарантирует методологическую точность каждого теста и алгоритма.</p>
                 <a href="team.html" class="btn secondary-btn">Узнать больше о команде</a> </div>
 
             <div class="reviews-grid">
@@ -333,7 +339,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Будущее образования начинается здесь.</h2>
-                <p>Станьте одним из первых, кто получит доступ к Educatimo Neuro. Присоединяйтесь к пилотной программе, чтобы протестировать платформу бесплатно и помочь сформировать ее развитие.</p>
+                <p>Станьте одним из первых, кто получит доступ к Educatimo Neuro. Присоединяйтесь к пилотному программе, чтобы протестировать платформу бесплатно и помочь сформировать ее развитие.</p>
             </div>
             
             <div class="registration-form">
