--- a/pl.html
+++ b/pl.html
@@ -142,7 +142,7 @@
     <section id="how-it-works">
         <div class="container">
             <div class="section-header">
-                <h2>Zobacz Educatimo Neuro w akcji.</h2>
+                <h2>Obejrzyj Educatimo Neuro w akcji.</h2>
                 <p>Obejrzyj krótki film, aby dowiedzieć się, jak nasza platforma pomaga digitalizować i wizualizować postępy poznawcze dzieci, czyniąc proces nauki przejrzystym i skutecznym.</p>
             </div>
             
@@ -162,11 +162,15 @@
             <div class="video-transcript">
                 <h3 class="transcript-toggle" onclick="toggleTranscript()">Transkrypcja wideo (wersja tekstowa)</h3>
                 <div class="transcript-content" id="transcript-content">
-                    <p><strong>[Początek]</strong> Witamy! Nazywam się [Imię] i mam przyjemność zaprezentować platformę Educatimo Neuro, stworzoną, aby rozwój dzieci był mierzalny i przejrzysty. Naszą misją jest przejście od "sprzedawania obietnic" do "demonstrowania wyników."</p>
-                    <p><strong>[0:15 - Opis problemu]</strong> Wiele ośrodków boryka się z problemem: jak pokazać rodzicowi, że jego dziecko naprawdę się rozwija? Tradycyjne testy dają jedynie statyczny wynik. My zapewniamy dynamikę.</p>
-                    <p><strong>[0:30 - Rozwiązanie]</strong> Educatimo Neuro wykorzystuje opatentowane algorytmy do analizy surowych danych testowych otrzymanych z tabletu i natychmiast przekształca je w interaktywne, zrozumiałe wykresy. Możesz zobaczyć, jak rośnie uwaga, poprawia się pamięć robocza i szybkość myślenia.</p>
-                    <p><strong>[0:45 - Funkcjonalność]</strong> Platforma umożliwia: 1. Przeprowadzenie standaryzowanego testu na tablecie. 2. Uzyskanie natychmiastowej analizy i zaleceń. 3. Wygenerowanie profesjonalnego, markowego raportu dla rodziców z logo Twojego ośrodka.</p>
-                    <p><strong>[1:00 - Wezwanie do działania]</strong> Dołącz do naszego programu pilotażowego. Bądź jednym z pierwszych, który zastosuje w edukacji podejście oparte na dowodach i zacznij demonstrować wyniki już dziś.</p>
+                    <p>Dlaczego klienci odchodzą nawet z dobrych ośrodków? Ponieważ słowa: "Twoje dziecko jest świetne" już nie wystarczają.</p>
+                    <p>Rodzice chcą widzieć rezultaty, za które płacą. Neuro Educatimo — pierwsza platforma SaaS do diagnostyki funkcji poznawczych oparta na dowodach naukowych.</p>
+                    <p>Spraw, aby postępy dziecka były widoczne i zrozumiałe. To proste. Nauczyciel rejestruje ucznia, a dziecko przechodzi fascynujące testy na tablecie.</p>
+                    <p>Bez stresu i nudnych egzaminów, pod kierunkiem specjalisty z Twojej organizacji. Wyniki testów są wysyłane na serwer.</p>
+                    <p>System natychmiast analizuje parametry mózgu i tworzy dokładny profil poznawczy ucznia. Widzisz nie tylko przekrój, ale także dynamikę.</p>
+                    <p>Rzeczywisty postęp w ciągu trzech miesięcy lub roku. To dowód skuteczności Twoich zajęć. Nasi partnerzy mogą przeglądać wszystkie przeprowadzone sesje testowe swoich uczniów, grupować ich według kierunków nauki lub wieku, dodawać i edytować specjalistów swojej organizacji, którzy zajmują się przeprowadzaniem i analizą testów.</p>
+                    <p>Pobieraj profesjonalne raporty z Twoim logo, danymi kontaktowymi i opisem Twoich metod. To buduje autorytet Twojej marki.</p>
+                    <p>Wprowadź diagnostykę jako usługę płatną. Zwiększaj LTV klienta i zaufanie rodziców, opierając się na twardych danych.</p>
+                    <p>Neuro Educatimo: wynik, który można zmierzyć. Zarejestruj się i otrzymaj miesiąc bezpłatnego dostępu.</p>
                 </div>
             </div>
             </div>
@@ -245,7 +249,9 @@
 
             <div class="about-us-block">
                 <h3>Oparte na nauce i doświadczeniu</h3>
-                <p>Projekt Educatimo Neuro powstał w 2018 roku jako lokalne rozwiązanie do oceny i korekcji funkcji poznawczych w prywatnym ośrodku edukacyjnym. Dziś, dzięki współpracy z wiodącymi neuropsychologami, przekształciliśmy go w skalowalną platformę SaaS. Nasz zespół ma 10-letnie doświadczenie w tworzeniu technologii edukacyjnych i gwarantuje metodyczną dokładność każdego testu i algorytmu.</p>
+                <p>Nasz projekt został stworzony bez pomocy profesjonalnych programistów i marketerów. To jest rozwiązanie **od pedagogów dla pedagogów**. Najpierw przetestowaliśmy ten pomysł **w naszych własnych dziecięcych ośrodkach edukacyjnych**, otrzymaliśmy pozytywne opinie od rodziców i zobaczyliśmy zainteresowanie dzieci.</p>
+                <p>Dopiero potem zapraszamy Cię do udziału w projekcie pilotażowym, mając pewność jego skuteczności. Dzielimy się naszym doświadczeniem i witamy nowych **kolegów-praktyków**!</p>
+                <p>Projekt Educatimo Neuro powstał w 2018 roku jako lokalne rozwiązanie do oceny i korekcji funkcji poznawczych **w naszych dziecięcych ośrodkach edukacyjnych**. Dziś, dzięki współpracy z wiodącymi neuropsychologami, przekształciliśmy go w skalowalną platformę SaaS. Nasz zespół ma 10-letnie doświadczenie w tworzeniu technologii edukacyjnych i gwarantuje metodyczną dokładność każdego testu i algorytmu.</p>
                 <a href="team-pl.html" class="btn secondary-btn">Dowiedz się więcej o zespole</a> </div>
 
             <div class="reviews-grid">
