--- a/ua.html
+++ b/ua.html
@@ -142,7 +142,7 @@
     <section id="how-it-works">
         <div class="container">
             <div class="section-header">
-                <h2>Побачте Educatimo Neuro у дії.</h2>
+                <h2>Перегляньте Educatimo Neuro у дії.</h2>
                 <p>Перегляньте коротке відео, щоб дізнатися, як наша платформа допомагає оцифровувати та візуалізувати когнітивний прогрес дітей, роблячи процес навчання прозорим та ефективним.</p>
             </div>
             
@@ -162,12 +162,16 @@
             <div class="video-transcript">
                 <h3 class="transcript-toggle" onclick="toggleTranscript()">Транскрипція відео (текстова версія)</h3>
                 <div class="transcript-content" id="transcript-content">
-                    <p><strong>[Початок]</strong> Вітаємо! Мене звати [Ім'я], і я радий представити вам Educatimo Neuro, платформу, створену для того, щоб зробити розвиток дітей вимірюваним і прозорим. Наша місія — перейти від "продажу обіцянок" до "демонстрації результатів".</p>
-                    <p><strong>[0:15 - Опис проблеми]</strong> Багато центрів стикаються з проблемою: як показати батькові, що його дитина справді розвивається? Традиційні тести дають лише статичний бал. Ми ж даємо динаміку.</p>
-                    <p><strong>[0:30 - Рішення]</strong> Educatimo Neuro використовує запатентовані алгоритми аналізу сирих даних тестування, отриманих з планшета, і миттєво перетворює їх на інтерактивні, зрозумілі графіки. Ви бачите, як зростає увага, покращується робоча пам'ять та швидкість мислення.</p>
-                    <p><strong>[0:45 - Функціонал]</strong> Платформа дозволяє: 1. Провести стандартизований тест на планшеті. 2. Отримати моментальний аналіз та рекомендації. 3. Генерувати професійний, брендований звіт для батьків з логотипом вашого центру.</p>
-                    <p><strong>[1:00 - Заклик до дії]</strong> Приєднуйтесь до нашої пілотної програми. Станьте одним із перших, хто використовує доказовий підхід в освіті і почніть демонструвати результати вже сьогодні.</p>
-                    </div>
+                    <p>Чому батьки йдуть навіть з хороших центрів? Тому що слів: "Ваша дитина молодець" вже недостатньо.</p>
+                    <p>Батьки хочуть бачити результат, за який платять. Neuro Educatimo — перша SaaS-платформа доказової діагностики когнітивних функцій.</p>
+                    <p>Зробіть прогрес дитини видимим і зрозумілим. Все просто. Педагог реєструє учня, і дитина проходить захоплююче тестування на планшеті.</p>
+                    <p>Без стресу і нудних іспитів, під керуванням фахівця вашої організації. Результати тестування відправляються на сервер.</p>
+                    <p>Система миттєво аналізує параметри мозку і будує точний когнітивний профіль учня. Ви бачите не просто зріз, а динаміку.</p>
+                    <p>Реальний прогрес за три місяці або рік. Це доказ ефективності ваших занять. Наші партнери можуть бачити всі проведені сесії тестування своїх учнів, компонувати їх у групи за напрямками навчання або віком, додавати і редагувати фахівців своєї організації, які займаються проведенням і аналізом тестів.</p>
+                    <p>Завантажуйте професійні звіти з вашим логотипом, реквізитами та описом саме ваших методик. Це працює на авторитет вашого бренду.</p>
+                    <p>Проводьте діагностику як платну послугу. Збільшуйте LTV клієнта і довіру батьків, спираючись на тверді дані.</p>
+                    <p>Neuro Educatimo: результат, який можна виміряти. Реєструйтеся і отримайте місяць безкоштовного доступу.</p>
+                </div>
             </div>
             </div>
     </section>
@@ -245,9 +249,10 @@
 
             <div class="about-us-block">
                 <h3>Засновано на науці та досвіді</h3>
-                <p>Проєкт Educatimo Neuro зародився у 2018 році як локальне рішення для оцінювання та корекції когнітивних функцій у приватному освітньому центрі. Сьогодні, завдяки співпраці з провідними нейропсихологами, ми перетворили його на масштабовану SaaS-платформу. Наша команда має 10-річний досвід у розробці освітніх технологій і гарантує методологічну точність кожного тесту та алгоритму.</p>
-                <a href="team-ua.html" class="btn secondary-btn">Дізнатися більше про команду</a> 
-                
+                <p>Наш проєкт створено без допомоги професійних програмістів та маркетологів. Це рішення **від педагогів для педагогів**. Ми спочатку перевірили цю ідею у **власних дитячих освітніх центрах**, отримали позитивний відгук від батьків та побачили інтерес дітей.</p>
+                <p>Тільки після цього ми пропонуємо вам приєднатися до пілотного проєкту, будучи впевненими у його ефективності. Ми ділимося своїм досвідом і раді будемо новим **колегам-практикам**!</p>
+                <p>Проєкт Educatimo Neuro зародився у 2018 році як локальне рішення для оцінювання та корекції когнітивних функцій у **наших дитячих освітніх центрах**. Сьогодні, завдяки співпраці з провідними нейропсихологами, ми перетворили його на масштабовану SaaS-платформу. Наша команда має 10-річний досвід у розробці освітніх технологій і гарантує методологічну точність кожного тесту та алгоритму.</p>
+                <a href="team-ua.html" class="btn secondary-btn">Дізнатися більше про команду</a> </div>
 
             <div class="reviews-grid">
                 <h3>Що говорять наші партнери?</h3>
