--- a/en.html
+++ b/en.html
@@ -142,7 +142,7 @@
     <section id="how-it-works">
         <div class="container">
             <div class="section-header">
-                <h2>See Educatimo Neuro in action.</h2>
+                <h2>Watch Educatimo Neuro in Action.</h2>
                 <p>Watch a short video to learn how our platform helps digitize and visualize children's cognitive progress, making the learning process transparent and effective.</p>
             </div>
             
@@ -162,11 +162,15 @@
             <div class="video-transcript">
                 <h3 class="transcript-toggle" onclick="toggleTranscript()">Video Transcription (Text Version)</h3>
                 <div class="transcript-content" id="transcript-content">
-                    <p><strong>[Start]</strong> Hello! My name is [Name], and I am happy to introduce you to Educatimo Neuro, a platform created to make children's development measurable and transparent. Our mission is to move from "selling promises" to "demonstrating results."</p>
-                    <p><strong>[0:15 - Problem Description]</strong> Many centers face a problem: how to show a parent that their child is truly developing? Traditional tests only provide a static score. We provide dynamics.</p>
-                    <p><strong>[0:30 - Solution]</strong> Educatimo Neuro uses proprietary algorithms to analyze raw testing data received from a tablet and instantly converts it into interactive, understandable charts. You can see how attention grows, working memory and thinking speed improve.</p>
-                    <p><strong>[0:45 - Functionality]</strong> The platform allows you to: 1. Conduct a standardized test on a tablet. 2. Get instant analysis and recommendations. 3. Generate a professional, branded report for parents with your center's logo.</p>
-                    <p><strong>[1:00 - Call to Action]</strong> Join our pilot program. Be one of the first to use an evidence-based approach in education and start demonstrating results today.</p>
+                    <p>Why are customers leaving even good centers? Because the words: "Your child is doing well" are no longer enough.</p>
+                    <p>Parents want to see the results they are paying for. Neuro Educatimo is the first SaaS platform for evidence-based cognitive function diagnostics.</p>
+                    <p>Make your child's progress visible and understandable. It's simple. The teacher registers the student, and the child takes an exciting test on a tablet.</p>
+                    <p>No stress or boring exams, under the guidance of a specialist from your organization. The test results are sent to the server.</p>
+                    <p>The system instantly analyzes brain parameters and builds an accurate cognitive profile of the student. You see not just a snapshot, but dynamics.</p>
+                    <p>Real progress over three months or a year. This is proof of the effectiveness of your classes. Our partners can see all the testing sessions conducted for their students, group them by field of study or age, add and edit specialists from their organization who are involved in conducting and analyzing tests.</p>
+                    <p>Download professional reports with your logo, details, and a description of your specific methods. This works to build your brand's credibility.</p>
+                    <p>Introduce diagnostics as a paid service. Increase customer LTV and parent trust, based on solid data.</p>
+                    <p>Neuro Educatimo: results you can measure. Sign up and get a month of free access.</p>
                 </div>
             </div>
             </div>
@@ -231,6 +235,7 @@
                     <div class="icon"><i class="fas fa-brain"></i></div>
                     <h3>Neuropsychological centers</h3>
                     <p>Deepen your diagnostics and therapy tracking. Visualize changes in cognitive functions, confirming the effectiveness of your work.</p>
+                </p>
                 </div>
             </div>
         </div>
@@ -245,7 +250,9 @@
 
             <div class="about-us-block">
                 <h3>Based on science and experience</h3>
-                <p>The Educatimo Neuro project originated in 2018 as a local solution for assessing and correcting cognitive functions in a private educational center. Today, thanks to cooperation with leading neuropsychologists, we have transformed it into a scalable SaaS platform. Our team has 10 years of experience in developing educational technologies and guarantees the methodological accuracy of every test and algorithm.</p>
+                <p>Our project was created without the help of professional programmers and marketers. This is a solution **from educators for educators**. We first tested this idea in **our own children's educational centers**, received positive feedback from parents, and saw children's interest.</p>
+                <p>Only after this do we invite you to join the pilot project, being confident in its effectiveness. We share our experience and welcome new **colleagues-practitioners**!</p>
+                <p>The Educatimo Neuro project originated in 2018 as a local solution for assessing and correcting cognitive functions in **our children's educational centers**. Today, thanks to cooperation with leading neuropsychologists, we have transformed it into a scalable SaaS platform. Our team has 10 years of experience in developing educational technologies and guarantees the methodological accuracy of every test and algorithm.</p>
                 <a href="team-en.html" class="btn secondary-btn">Learn more about the team</a> </div>
 
             <div class="reviews-grid">
